--- a/Canvast/index.html
+++ b/Canvast/index.html
@@ -9,45 +9,42 @@
 </head>
 
 <body>
-    <div class="bg_texture">
+    <div class="bg_texture"></div>
+    <img src="images/logo.png" id="logo">
+    <div class="container">
+        <div class="top-form">
+            <h1>LOGIN</h1>
+            <form action="#">
+                <div class="login-box">
+                    <label for="name">Username:</label><br>
+                    <input type="text" minlength="4" placeholder="username" maxlength="15" required id="name"
+                        title="Please input your account's username"><br>
+                </div>
+
+                <div class="login-box">
+                    <label for="pass">Password:</label><br>
+                    <input type="password" min="5" placeholder="password" required id="pass"
+                        title="Please input your account's password"><br><br>
+                </div>
+
+                <div class="login-button">
+                    <button type="submit">Login</button>
+                </div>
+            </form>
+        </div>
+
+        <div class="bot-form">
+            <form action="#">
+                <label for="forgot">Forgot username or password?</label><br>
+                <button type="submit" id="forgot">Reset username or password</button>
+            </form>
+            <form action="#">
+                <label>Don't have an account?</label>
+                <button>Signup</button>
+            </form>
+        </div>
 
     </div>
-    <nav>
-        <div class="container">
-            <div class="top-form">
-                <h1>LOGIN</h1>
-                <form action="#">
-                    <div class="login-box">
-                        <label for="name">Username:</label><br>
-                        <input type="text" minlength="4" placeholder="username" maxlength="15" required id="name"
-                            title="Please input your account's username"><br>
-                    </div>
-                    
-                    <div class="login-box">
-                        <label for="pass">Password:</label><br>
-                        <input type="password" min="5" placeholder="password" required id="pass"
-                            title="Please input your account's password"><br><br>
-                    </div>
-
-                    <div class="login-button">
-                        <button type="submit">Login</button>
-                    </div>
-                </form>
-            </div>
-
-            <div class="bot-form">
-                <form action="#">
-                    <label for="forgot">Forgot username or password?</label><br>
-                    <button type="submit" id="forgot">Reset username or password</button>
-                </form>
-                <form action="#">
-                    <label>Don't have an account?</label>
-                    <button>Signup</button>
-                </form>
-            </div>
-
-        </div>
-    </nav>
 
 </body>
 
