--- a/Canvast/index.html
+++ b/Canvast/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="images/png" href="images/logo.png">
     <link rel="stylesheet" href="styles.css">
     <title>Canvast | Login</title>
 </head>
@@ -13,16 +14,14 @@
     <img src="images/logo.png" id="logo">
     <div class="container">
         <div class="top-form">
-            <h1>LOGIN</h1>
+            <h1>CANVAST</h1>
             <form action="#">
                 <div class="login-box">
-                    <label for="name">Username:</label><br>
-                    <input type="text" minlength="4" placeholder="username" maxlength="15" required id="name"
+                    <input type="text" minlength="4" placeholder="username or account email" maxlength="15" required id="name"
                         title="Please input your account's username"><br>
                 </div>
 
                 <div class="login-box">
-                    <label for="pass">Password:</label><br>
                     <input type="password" min="5" placeholder="password" required id="pass"
                         title="Please input your account's password"><br><br>
                 </div>
